--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -94,7 +94,7 @@
 
 
 
-            <h1 >Alta Disponibilidad  con Hazelcast y Spring boot</h1>
+            <h1 >Spring boot</h1>
 
             <tr><th>Port</th><td th:text="${puerto}">asdasdasd</td></tr>
             <!-- Page Content -->
